--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <h2>Project</h2>
     <nav>
       <ul>
-        <li><a href="topic-brainstorm.html">Topic Brainstorm</a></li>
+        <li><a href="images/topic-brainstorm.jpg">Topic Brainstorm</a></li>
       </ul>
     </nav>
 </section>
