Footer and Header
Changed footer to be fixed.

--- a/index.html
+++ b/index.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
-<html>
-  <head>
-      <link rel="stylesheet" type="text/css" href="styles.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <link href="https://meyerweb.com/eric/tools/css/reset/reset.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
-    <meta charset="UTF-8">
     <title>Fiona's Portal</title>
-  </head>
-  <body>
+</head>
+
+<body>
+    <header>
+        <h1><img src="images/logo.png" alt="logo" height="30" width="30"></h1>
+        <div id="mySketch"></div>
+    </header>
+
     <div>
-<header>
-<div id="mySketch">
-  <br>
-</div>
- </header>
-
-  <section>
-    <h2>Studios</h2>
-    <nav>
-      <ol>
-        <li><a href="">Mad Libs</a></li>
-      </ol>
-    </nav>
-</section>
+      <section>
+        <h2>Studios</h2>
+        <nav>
+          <ol>
+            <li><a href="">Mad Libs</a></li>
+          </ol>
+        </nav>
+    </section>
 
 
-<section>
-  <h2>Project</h2>
-    <nav>
-      <ul>
-        <li><a href="topic-brainstorm.html">Topic Brainstorm</a></li>
-      </ul>
-    </nav>
-</section>
+    <section>
+      <h2>Project</h2>
+        <nav>
+          <ul>
+            <li><a href="topic-brainstorm.html">Topic Brainstorm</a></li>
+          </ul>
+        </nav>
+    </section>
 
-<div id="name">
-<h3>Fiona Zhou</h3>
-<br>
-<h4> fxzhou@ucdavis.edu</h4>
-</div>
+    <aside>
+    <h3>Fiona Zhou</h3>
+    <br>
+    <h4> fxzhou@ucdavis.edu</h4>
+  </aside>
 
-<footer>
-  <br>
-  <p>
-	Contact: <a href="&#102;&#120;&#122;&#104;&#111;&#117;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">
-	&#102;&#120;&#122;&#104;&#111;&#117;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;</a>
-  <br>
-  <a href="https://validator.w3.org/">Valid HTML 5</a>
-  <br>
-    <a href="https://jigsaw.w3.org/css-validator/">Valid CSS</a>
-</p>
-</footer>
     </div>
-        <script src="script.js"></script>
-  </body>
+    <footer>
+    <a href="mailto:fxzhou@ucdavis.edu">Email</a> |
+    <a href="https://www.linkedin.com/in/fxzhou">LinkedIn</a> |
+    <a href="https://fxtzhou.github.io/des157/">GitHub</a> |
+      <a href="https://validator.w3.org/">Valid HTML 5</a> |
+        <a href="https://jigsaw.w3.org/css-validator/">Valid CSS</a>
+    </footer>
+
+    <script src="script.js"></script>
+
+</body>
+
 </html>
