--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 
     <section>
-      <h2>Project</h2>
+      <h2>Projects</h2>
         <nav>
           <ul>
-            <li><a href="topic-brainstorm.html">Topic Brainstorm</a></li>
+            <li><a href="projects/topic-brainstorm.html">Topic Brainstorm</a></li>
           </ul>
         </nav>
     </section>
