--- a/projects/topic-brainstorm.html
+++ b/projects/topic-brainstorm.html
@@ -8,11 +8,8 @@
     <title>Fiona's Portal</title>
   </head>
   <body>
-    <header>
-        <h1><img src="../images/logo.png" alt="logo" height="30" width="30"></h1>
+    <header><img src="../images/logo.png" alt="logo" height="30" width="30">
     </header>
-
-
 
 <div>
           <a href="https://fxtzhou.github.io/des157/">Back</a>
