Added Comparative Research to projects
Added list item to projects on homepage.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <nav>
           <ul>
             <li><a href="projects/topic-brainstorm.html">Topic Brainstorm</a></li>
+            <li><a href="projects/comparative.html">Comparative Research</a></li>
           </ul>
         </nav>
     </section>
