--- a/projects/comparative.html
+++ b/projects/comparative.html
@@ -80,7 +80,7 @@
     with the designer and their work. This is a great platform that promotes black
     designers, and helped me think about ways I can incorporate showcasing the
     works of others, while still conveying an important message about diversity
-    in design.
+    in design.</p>
 </div>
 
     <footer>
