--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Studios</h2>
         <nav>
           <ol>
-            <li><a href="https://fxtzhou.github.io/des157/studio1/index.html">Studio 1 - Mad Libs</a></li>
+            <li><a href="https://fxtzhou.github.io/des157/studios/studio1/index.html">Studio 1 - Mad Libs</a></li>
           </ol>
         </nav>
     </section>
