--- a/studios/studio1/index.html
+++ b/studios/studio1/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>What's In Your Future?</title>
   <link href="https://meyerweb.com/eric/tools/css/reset/reset.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:200|Lobster|Lobster+Two" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:200%7cLobster%7cLobster+Two" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
@@ -13,7 +13,7 @@
   <a href="https://fxtzhou.github.io/des157/">Back</a>
   <header>
 
-<img src="images/ball.png" alt="ball" align="left" height="70px" width="auto">
+    <img src="images/ball.png" alt="ball" height="70" width="70">
     <h1>What's In Your Future?</h1>
   </header>
 
@@ -22,38 +22,38 @@
     <form name="f">
       <div>
         <label for="userName">Name</label>
-        <input type="text" name="userName" required>
+        <input type="text" id="userName" required>
       </div>
       <div>
         <label for="userSign">Horoscope</label>
-        <input type="text" name="userSign" required>
+        <input type="text" id="userSign" required>
       </div>
       <div>
         <label for="adj1">Adjective</label>
-        <input type="text" name="adj1" required>
+        <input type="text" id="adj1" required>
       </div>
       <div>
         <label for="adj2">Adjective</label>
-        <input type="text" name="adj2" required>
+        <input type="text" id="adj2" required>
       </div>
 
-            <div>
-              <label for="adj3">Adjective</label>
-              <input type="text" name="adj3" required>
-            </div>
+      <div>
+        <label for="adj3">Adjective</label>
+        <input type="text" id="adj3" required>
+      </div>
 
-            <div>
-              <label for="adv">Adverb</label>
-              <input type="text" name="adv" required>
-            </div>
+      <div>
+        <label for="adv">Adverb</label>
+        <input type="text" id="adv" required>
+      </div>
 
       <div>
         <label for="verb1">Verb</label>
-        <input type="text" name="verb1" required>
+        <input type="text" id="verb1" required>
       </div>
       <div>
         <label for="verb2">Verb</label>
-        <input type="text" name="verb2" required>
+        <input type="text" id="verb2" required>
       </div>
 
 
@@ -61,7 +61,7 @@
 
       <div>
         <label for="noun">Noun</label>
-        <input type="text" name="noun" required>
+        <input type="text" id="noun" required>
       </div>
 
 
@@ -74,9 +74,9 @@
     </form>
   </article>
 
-    <section id="results">
-      <p id="myFuture"></p>
-    </section>
+  <section id="results">
+    <p id="myFuture"></p>
+  </section>
 
   <footer>
     <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
