--- a/index.html
+++ b/index.html
@@ -2,58 +2,59 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <link href="https://meyerweb.com/eric/tools/css/reset/reset.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
-    <title>Fiona's Portal</title>
+  <meta charset="utf-8">
+  <link href="https://meyerweb.com/eric/tools/css/reset/reset.css" rel="stylesheet" />
+  <link href="styles.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
+  <title>Fiona's Portal</title>
 </head>
 
 <body>
 
-    <header>
-        <h1><img src="images/logo.png" alt="logo" height="30" width="30"></h1>
-        <div id="mySketch"></div>
-    </header>
+  <header>
+    <h1><img src="images/logo.png" alt="logo" height="30" width="30"></h1>
+    <div id="mySketch"></div>
+  </header>
 
-<div>
-      <section>
-        <h2>Studios</h2>
-        <nav>
-          <ol>
-            <li><a href="https://fxtzhou.github.io/des157/studios/studio1/index.html">Studio 1 - Mad Libs</a></li>
-          </ol>
-        </nav>
+  <div>
+    <section>
+      <h2>Studios</h2>
+      <nav>
+        <ol>
+          <li><a href="https://fxtzhou.github.io/des157/studios/studio1/index.html">Studio 1 - Mad Libs</a></li>
+          <li><a href="https://fxtzhou.github.io/des157/studios/studio2/index.html">Studio 2 - Pocketful of Interface</a></li>
+        </ol>
+      </nav>
     </section>
 
 
     <section>
       <h2>Projects</h2>
-        <nav>
-          <ul>
-            <li><a href="projects/topic-brainstorm.html">Topic Brainstorm</a></li>
-            <li><a href="projects/comparative.html">Comparative Research</a></li>
-          </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="projects/topic-brainstorm.html">Topic Brainstorm</a></li>
+          <li><a href="projects/comparative.html">Comparative Research</a></li>
+        </ul>
+      </nav>
     </section>
 
     <aside>
-    <h3>Fiona Zhou</h3>
-    <br>
-    <h4> fxzhou@ucdavis.edu</h4>
-  </aside>
+      <h3>Fiona Zhou</h3>
+      <br>
+      <h4> fxzhou@ucdavis.edu</h4>
+    </aside>
 
-</div>
-    <footer>
+  </div>
+  <footer>
     <a href="mailto:fxzhou@ucdavis.edu">Email</a> |
     <a href="https://www.linkedin.com/in/fxzhou">LinkedIn</a> |
     <a href="https://fxtzhou.github.io/des157/">GitHub</a> |
-      <a href="https://validator.w3.org/">Valid HTML 5</a> |
-        <a href="https://jigsaw.w3.org/css-validator/">Valid CSS</a>
-    </footer>
+    <a href="https://validator.w3.org/">Valid HTML 5</a> |
+    <a href="https://jigsaw.w3.org/css-validator/">Valid CSS</a>
+  </footer>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 
 </body>
 
