Edits to Portal Page
Fixed text alignment.
Altered Studio prefixes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <h2>Studios</h2>
       <nav>
         <ol>
-          <li><a href="https://fxtzhou.github.io/des157/studios/studio1/index.html">Studio 1 - Mad Libs</a></li>
-          <li><a href="https://fxtzhou.github.io/des157/studios/studio2/index.html">Studio 2 - Pocketful of Interface</a></li>
+          <li><a href="https://fxtzhou.github.io/des157/studios/studio1/index.html">1 - Mad Libs</a></li>
+          <li><a href="https://fxtzhou.github.io/des157/studios/studio2/index.html">2 - Pocketful of Interface</a></li>
         </ol>
       </nav>
     </section>
