--- a/studios/studio2/index.html
+++ b/studios/studio2/index.html
@@ -12,10 +12,12 @@
 </head>
 
 <body>
+  <header>
+      <a href="https://fxtzhou.github.io/des157/">Back</a>
   <h1>Items of Immense Value</h1>
   <h2>tread carefully... </h2>
   <h3>(click on some stuff)</h3>
-
+</header>
 
   <div id="container">
     <img src="images/planner.png" width="400" alt="planner" id="planner">
