--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <ul>
           <li><a href="projects/topic-brainstorm.html">Topic Brainstorm</a></li>
           <li><a href="projects/comparative.html">Comparative Research</a></li>
+          <li><a href="projects/research.html">Research</a></li>
         </ul>
       </nav>
     </section>
