--- a/projects/research.html
+++ b/projects/research.html
@@ -1,146 +1,101 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <link rel="stylesheet" type="text/css" href="styles.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
-    <meta charset="UTF-8">
-    <title>research</title>
-  </head>
-  <body>
-    <header><img src="../images/logo.png" alt="logo" height="30" width="30">
-    </header>
 
-<div>
-          <a href="https://fxtzhou.github.io/des157/">Back</a>
-  <ul>
-  <h2>Research</h2>
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
+  <meta charset="UTF-8">
+  <title>research</title>
+</head>
 
-<h4>I'm following up on the concept
+<body>
+  <header><img src="../images/logo.png" alt="logo" height="30" width="30">
+  </header>
+
+  <div>
+    <a href="https://fxtzhou.github.io/des157/">Back</a>
+    <ul>
+      <h2>Research</h2>
+
+      <h4>I'm following up on the concept
   of how "Design is 73%", which was a study conducted by AIGA back in January 2017.</h4>
 
-  <p> It's only natural that Artificial Intelligence (AI) follows suit after humans -
-    after all, we are the ones that have designed them. Humans are not perfect.
-    We are racist. Our first step in conquering that, <em>in my humble opinion</em>,
-    is by realizing that. I'm referring back to <a href="https://www.fastcodesign.com/3067659/survey-design-is-73-white">
-      Fast Co Design's </a> article again. Something different struck me this time
-      around and it made me think about how design might be so unethnically washed, so
-      to speak. Imagine that the general public, the ones that can afford <em>good</em>
-      design at the very least, is mostly white people - people that have the privilege
-      of obtaining such design to begin with. Why wouldn't design target this demographic
-      in comparison to any other demographic?</p>
-      <p>I wonder if I'm reaching if I said that the advertising and marketing strategies
-      of some companies are targetting white people, and thus have created interfaces,
-      design strategies, and even programs to help that demographic out. While the number
-      <b>73%</b> is a huge drop from its original estimate of <b>99%</b>, I still think
-      we have quite a bit to work on when it comes to bringing that number down. I wouldn't
-      say an arbitrary one like 50% would do. It needs to have meaning.</p>
+      <p> It's only natural that Artificial Intelligence (AI) follows suit after humans - after all, we are the ones that have designed them. Humans are not perfect. We are racist. Our first step in conquering that, <em>in my humble opinion</em>, is by realizing
+        that. I'm referring back to <a href="https://www.fastcodesign.com/3067659/survey-design-is-73-white">
+      Fast Co Design's </a> article again. Something different struck me this time around and it made me think about how design might be so unethnically washed, so to speak. Imagine that the general public, the ones that can afford <em>good</em> design
+        at the very least, is mostly white people - people that have the privilege of obtaining such design to begin with. Why wouldn't design target this demographic in comparison to any other demographic?</p>
+      <p>I wonder if I'm reaching if I said that the advertising and marketing strategies of some companies are targetting white people, and thus have created interfaces, design strategies, and even programs to help that demographic out. While the number
+        <b>73%</b> is a huge drop from its original estimate of <b>99%</b>, I still think we have quite a bit to work on when it comes to bringing that number down. I wouldn't say an arbitrary one like 50% would do. It needs to have meaning.</p>
 
-      <blockquote>Anixter says that being on par with the U.S. census should be the goal for the design industry—one that will only be reached if design leaders commit to hiring for diversity, looking for and exposing the work of those outside of their own design circles and studios, and checking their unconscious biases.
+      <blockquote>Anixter says that being on par with the U.S. census should be the goal for the design industry—one that will only be reached if design leaders commit to hiring for diversity, looking for and exposing the work of those outside of their own design
+        circles and studios, and checking their unconscious biases.
       </blockquote>
-      <p>Essentially, Julie Anixter is saying that in America, white isn't the majority anymore.
-        Far from it, actually. Design should match that consensus, and though they're
-        essentially drawing these numbers from the <b>9602</b> designers that
-        participated in the AIGA consensus, it still doesn't explain why there's such
-        a huge gap between the representation of other ethnicities.<p>
-          <p>The biggest point I would want to make in regards to this article, is the
-            importance of <h4>The Ethnic Filter</h4> once again. It's given perspective
-            as to what it means for the underrepresented in design. In the end, I don't think
-            this argument is too much of a stretch because it's similar to a struggle
-            the STEM industry has concluded about the underrepresentation of women.
-            STEM has since opted to bring forth programs to include more women, and
-            it's become less and less uncommon for women to be majoring in fields like
-            engineering. We need this to be the norm for design.
+      <p>Essentially, Julie Anixter is saying that in America, white isn't the majority anymore. Far from it, actually. Design should match that consensus, and though they're essentially drawing these numbers from the <b>9602</b> designers that participated
+        in the AIGA consensus, it still doesn't explain why there's such a huge gap between the representation of other ethnicities.
+        <p>
+          <p>The biggest point I would want to make in regards to this article, is the importance of <b>The Ethnic Filter</b> once again. It's given perspective as to what it means for the underrepresented in design. In the end, I don't think this argument
+            is too much of a stretch because it's similar to a struggle the STEM industry has concluded about the underrepresentation of women. STEM has since opted to bring forth programs to include more women, and it's become less and less uncommon
+            for women to be majoring in fields like engineering. We need this to be the norm for design.
 
             <h4>The Frustrating User Experience of Defining Your Own Ethnicity</h4>
 
-            <p>I wasn't sure if it was a joke in the past, but after the market crash
-              back in 2008, there was some rumor that UCs would stop taking Asian students
-              because there were <em>so</em> many of them, and they wouldn't to appear
-              more diverse. I was a senior in high school then, so getting into a
-              university at the time was probably the biggest problem for me since
-              I'd been raised to believe that the opportunity was always there.
-              Things suddenly changed, and that wasn't the case anymore. I lingered
-              for a very brief moment on whether or not I should've picked <b>white</b>
-              on my applications instead. I mean, I was very wrong, ethnically.
-              But a lot of Asians at this time made the argument that by all means,
-              they were American. Born and raised in America. White-washed. A banana,
-              essentially. These phrases were very common around that time.</p>
+            <p>I wasn't sure if it was a joke in the past, but after the market crash back in 2008, there was some rumor that UCs would stop taking Asian students because there were <em>so</em> many of them, and they wouldn't to appear more diverse. I was
+              a senior in high school then, so getting into a university at the time was probably the biggest problem for me since I'd been raised to believe that the opportunity was always there. Things suddenly changed, and that wasn't the case anymore.
+              I lingered for a very brief moment on whether or not I should've picked <b>white</b> on my applications instead. I mean, I was very wrong, ethnically. But a lot of Asians at this time made the argument that by all means, they were American.
+              Born and raised in America. White-washed. A banana, essentially. These phrases were very common around that time.</p>
 
-              <p>In this article, <a href="https://uxdesign.cc/the-frustrating-user-experience-of-defining-your-own-ethnicity-50b0edc87a6e">Fabricio Teixeira</a>,
-                who I must apologize to, (I assumed he was white) said that it wasn't
-                fair that he had to pick from an extremely small list of ethnicities
-                while filling out a survey. It inspired him to write the article.
-                <img src="https://cdn-images-1.medium.com/max/1600/1*Mbv_aJlT9zzhyTjSwqUsSg.jpeg">
-                After giving some background information, one can gather why he'd be
-                so frustrated with being only able to choose from 4 options. While he
-                  was born and raised in Brazil, he was extremely white passing. He comments
-                  that a rainbow is more nuanced that you would think. How hard of a concept
-                  is it really that we can't apply this to ourselves? We make inspirational
-                  quotes all the time about how unique we are!</p>
+            <p>In this article, <a href="https://uxdesign.cc/the-frustrating-user-experience-of-defining-your-own-ethnicity-50b0edc87a6e">Fabricio Teixeira</a>, who I must apologize to, (I assumed he was white) said that it wasn't fair that he had to pick
+              from an extremely small list of ethnicities while filling out a survey. It inspired him to write the article.
+              <img src="https://cdn-images-1.medium.com/max/1600/1*Mbv_aJlT9zzhyTjSwqUsSg.jpeg" width='500'> After giving some background information, one can gather why he'd be so frustrated with being only able to choose from 4 options. While he was
+              born and raised in Brazil, he was extremely white passing. He comments that a rainbow is more nuanced that you would think. How hard of a concept is it really that we can't apply this to ourselves? We make inspirational quotes all the time
+              about how unique we are!</p>
 
-                  <p>Teixeira goes on to say that there's a <h4>User Experience</h4> problem.
-                    I didn't read past this point before I tried to infer what that might
-                    mean. Imagine being a UX designer for a company that, for the lack
-                    of a better term, fell under the category of designing for consumerism,
-                    and your extremely non-millennial boss asks you to draft up a survey
-                    to put up on the company website. You're giving these options for
-                    the first question <h3>What is your ethnicity</h3>. You can't even
-                    speak up and say that there are more than just 4 ethnicities, but at this
-                    point, I'd expect that your boss isn't having any of it.</p>
+            <p>Teixeira goes on to say that there's a
+              <b>User Experience</b> problem. I didn't read past this point before I tried to infer what that might mean. Imagine being a UX designer for a company that, for the lack of a better term, fell under the category of designing for consumerism,
+              and your extremely non-millennial boss asks you to draft up a survey to put up on the company website. You're giving these options for the first question
+              <b>What is your ethnicity</b>. You can't even speak up and say that there are more than just 4 ethnicities, but at this point, I'd expect that your boss isn't having any of it.</p>
 
-                    <blockquote>Every day we design digital products and interfaces that prompt users to identify themselves using pre-defined categories provided by the system. It is part of our responsibility as designers to create mechanisms and design solutions that enable less binary, more flexible, and more inclusive denominations.
+            <blockquote>Every day we design digital products and interfaces that prompt users to identify themselves using pre-defined categories provided by the system. It is part of our responsibility as designers to create mechanisms and design solutions that
+              enable less binary, more flexible, and more inclusive denominations. Companies like Facebook have started to adapt their user interface to accommodate for this new reality and to offer users a wider range of options. 58 options when it comes
+              to gender identity, to be more specific.
 
-Companies like Facebook have started to adapt their user interface to accommodate for this new reality and to offer users a wider range of options. 58 options when it comes to gender identity, to be more specific.
+              <b>What can we learn from gender definition, and when are we going to start looking at ethnicity with the same depth and nuance?</b></blockquote>
 
-<b>What can we learn from gender definition, and when are we going to start looking at ethnicity with the same depth and nuance?</b></blockquote>
+            <p>I think the question Teixeira asks here is very important. This kinda goes hand in hand with the point made in the first article. Why doesn't design match the US consensus in anyway? We are definitely not 73% white. And America is not made
+              up of Whites, Asians, African Americans, and Hispanics alone. The next few points are brought up on how we can better design so that it can encapsulate diversity, and as it's Teixeira's job as a UX designer to make the user experience better
+              for all users, he brings up a few good points that I felt could be applied to something informational I want to potentially create.</p>
 
-<p>I think the question Teixeira asks here is very important. This kinda goes hand in
-  hand with the point made in the first article. Why doesn't design match the
-  US consensus in anyway? We are definitely not 73% white. And America is not made
-  up of Whites, Asians, African Americans, and Hispanics alone. The next few points
-  are brought up on how we can better design so that it can encapsulate diversity,
-  and as it's Teixeira's job as a UX designer to make the user experience better for
-  all users, he brings up a few good points that I felt could be applied to something
-  informational I want to potentially create.</p>
+            <ol>
+              <li>Explore different ways to frame the question</li>
+              <li>Explain the reason why the question is being asked</li>
+              <li>Consider expanding the number of options available</li>
+              <li>Break down of the different aspects of ethnicity</li>
+              <li>Design for clarity and comfort</li>
+            </ol>
 
-  <ol>
-    <li>Explore different ways to frame the question</li>
-<li>Explain the reason why the question is being asked</li>
-<li>Consider expanding the number of options available</li>
-<li>Break down of the different aspects of ethnicity</li>
-<li>Design for clarity and comfort</li>
-    </ol>
+            <h4>Inclusive Design</h4>
+            <p><a href="https://idrc.ocadu.ca/index.php/resources/idrc-online/library-of-papers/443-whatisinclusivedesign">Inclusive Design</a> made me remember one of the first things I learned in sociology being that the only way we can decrease bias is
+              by first acknowledging that we are. We need to acknowledge that design is not as inclusive as some other fields. This article commutes some points about what we can do to make design more inclusive, even inviting it to be its own part of
+              the design field which I think is something that we could all attribute to something as large as say, sustainable design.</p>
+            <ol>
+              <li>Recognizing diversity and uniqueness</li>
+              <li>Using inclusive processes and tools</li>
+              <li>Enabling broader beneficial impact</li>
+            </ol>
+            <p>These points helped me think of the perspective I wanted to bring forth in my final project, actually. I plan on making an informational, interactive piece celebrating the diversity of people while inviting them to design for the world. I
+              think that the people who have the ability to make the largest impact are the ones really in tune with the world, and this means people from many backgrounds who have experienced much more than one can assume. </p>
 
-    <h4>Inclusive Design</h4>
-    <p><a href="https://idrc.ocadu.ca/index.php/resources/idrc-online/library-of-papers/443-whatisinclusivedesign">Inclusive Design</a>
-    made me remember one of the first things I learned in sociology being that the
-    only way we can decrease bias is by first acknowledging that we are. We need
-    to acknowledge that design is not as inclusive as some other fields. This article
-    commutes some points about what we can do to make design more inclusive, even
-    inviting it to be its own part of the design field which I think is something
-    that we could all attribute to something as large as say, sustainable design.</p>
-    <ol>
-      <li>Recognizing diversity and uniqueness</li>
-<li>Using inclusive processes and tools</li>
-<li>Enabling broader beneficial impact</li>
-</ol>
-<p>These points helped me think of the perspective I wanted to bring forth in my
-final project, actually. I plan on making an informational, interactive piece
-celebrating the diversity of people while inviting them to design for the world.
-I think that the people who have the ability to make the largest impact are the
-ones really in tune with the world, and this means people from many backgrounds
-who have experienced much more than one can assume. </p>
+  </div>
 
-</div>
-
-    <footer>
+  <footer>
     <a href="mailto:fxzhou@ucdavis.edu">Email</a> |
     <a href="https://www.linkedin.com/in/fxzhou">LinkedIn</a> |
     <a href="https://fxtzhou.github.io/des157/">GitHub</a> |
-      <a href="https://validator.w3.org/">Valid HTML 5</a> |
-        <a href="https://jigsaw.w3.org/css-validator/">Valid CSS</a>
-    </footer>
-        <script src="script.js"></script>
-  </body>
+    <a href="https://validator.w3.org/">Valid HTML 5</a> |
+    <a href="https://jigsaw.w3.org/css-validator/">Valid CSS</a>
+  </footer>
+  <script src="script.js"></script>
+</body>
+
 </html>
