added research to index

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <li><a href="projects/topic-brainstorm.html">Topic Brainstorm</a></li>
           <li><a href="projects/comparative.html">Comparative Research</a></li>
           <li><a href="projects/research.html">Research</a></li>
+          <li><a href="projects/audience.html">Research</a></li>
         </ul>
       </nav>
     </section>
