--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
         <ul>
           <li><a href="projects/topic-brainstorm.html">Topic Brainstorm</a></li>
           <li><a href="projects/comparative.html">Comparative Research</a></li>
-          <li><a href="projects/research.html">Research</a></li>
-          <li><a href="projects/audience.html">Audience Research</a></li>
+                    <li><a href="projects/research.html">Research</a></li>
+                      <li><a href="projects/audience.html">Audience Research</a></li>
+                        <li><a href="projects/storyboards.html">Storyboards</a></li>
         </ul>
       </nav>
     </section>
