--- a/projects/storyboards.html
+++ b/projects/storyboards.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
     <meta charset="UTF-8">
-    <title>topic brainstorm</title>
+    <title>storyboards</title>
   </head>
   <body>
     <header><img src="../images/logo.png" alt="logo" height="30" width="30">
