--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <ol>
           <li><a href="https://fxtzhou.github.io/des157/studios/studio1/index.html">1 - Mad Libs</a></li>
           <li><a href="https://fxtzhou.github.io/des157/studios/studio2/index.html">2 - Pocketful of Interface</a></li>
+          <li><a href="https://fxtzhou.github.io/des157/studios/studio4/index.html">4 - Meet Me in the Library</a></li>
         </ol>
       </nav>
     </section>
