--- a/studios/studio4/index.html
+++ b/studios/studio4/index.html
@@ -10,11 +10,9 @@
 <body>
     <!--Simple sentence-->
     <header class="fadeInDown animated">
+			    <a href="https://fxtzhou.github.io/des157/">Back</a>
       <h1>How Would You Answer This?</h1>
       </header>
-
-
-
 
     <div id="poll" class="fadeInUp animated">
         What Is Your Ethnicity?
