Included project brief
placed brief.html
altered styles slightly
put link on index page

--- a/projects/research.html
+++ b/projects/research.html
@@ -86,6 +86,11 @@
             <p>These points helped me think of the perspective I wanted to bring forth in my final project, actually. I plan on making an informational, interactive piece celebrating the diversity of people while inviting them to design for the world. I
               think that the people who have the ability to make the largest impact are the ones really in tune with the world, and this means people from many backgrounds who have experienced much more than one can assume. </p>
 
+<h4> Bibliography </h4>
+<ul><li>“Inclusive Design.” Inclusive Design Research Centre, idrc.ocadu.ca/index.php/resources/idrc-online/library-of-papers/443-whatisinclusivedesign.</li>
+  <li>10152232420826406. “The (Frustrating) User Experience of Defining Your Own Ethnicity.” UX Collective, UX Collective, 12 Sept. 2016, uxdesign.cc/the-frustrating-user-experience-of-defining-your-own-ethnicity-50b0edc87a6e.</li>
+  <li>Miller, Meg. “Survey: Design Is 73% White.” Co.Design, Co.Design, 31 Jan. 2017, www.fastcodesign.com/3067659/survey-design-is-73-white.</li>
+</ul>
   </div>
 
   <footer>
