--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                       <li><a href="projects/audience.html">Audience Research</a></li>
                         <li><a href="projects/storyboards.html">Storyboards</a></li>
                         <li><a href="projects/moodboards.html">Visual Research</a></li>
+                        <li><a href="projects/brief.html">Project Brief</a></li>
         </ul>
       </nav>
     </section>
