--- a/projects/storyboards.html
+++ b/projects/storyboards.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <link rel="stylesheet" type="text/css" href="styles.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
-    <meta charset="UTF-8">
-    <title>storyboards</title>
-  </head>
-  <body>
-    <header><img src="../images/logo.png" alt="logo" height="30" width="30">
-    </header>
 
-<div>
-          <a href="https://fxtzhou.github.io/des157/">Back</a>
-  <ul>
-  <h2>Diversity in Design</h2>
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
+  <meta charset="UTF-8">
+  <title>storyboards</title>
+</head>
 
+<body>
+  <header><img src="../images/logo.png" alt="logo" height="30" width="30">
+  </header>
 
-<img src="../images/storyboard1.jpg" alt="storyboard1" width="500">
-<img src="../images/storyboard2.jpg" alt="storyboard1" width="500">
+  <div>
+    <a href="https://fxtzhou.github.io/des157/">Back</a>
+    <h2>Diversity in Design</h2>
 
-</div>
+    <p>After storyboarding, I realized that I wanted my audience to be a little more general. I received some feedback about how the site would gain traction or reachability, which made me think about how the high school student with interest in design might
+      do research for the field. It's easy to just look it up via a wikipedia page or just get a list of the different disciplines in design. As of now, for this project, I don't have the ability to get it onto the first page of search results so I'm
+      going to rethink how I can maybe make the site more informational with the target audience being just a general prospective audience.</p>
+    <img src="../images/storyboard1.jpg" alt="storyboard1" width="500">
+    <img src="../images/storyboard2.jpg" alt="storyboard1" width="500">
 
-    <footer>
+  </div>
+
+  <footer>
     <a href="mailto:fxzhou@ucdavis.edu">Email</a> |
     <a href="https://www.linkedin.com/in/fxzhou">LinkedIn</a> |
     <a href="https://fxtzhou.github.io/des157/">GitHub</a> |
-      <a href="https://validator.w3.org/">Valid HTML 5</a> |
-        <a href="https://jigsaw.w3.org/css-validator/">Valid CSS</a>
-    </footer>
-        <script src="script.js"></script>
-  </body>
+    <a href="https://validator.w3.org/">Valid HTML 5</a> |
+    <a href="https://jigsaw.w3.org/css-validator/">Valid CSS</a>
+  </footer>
+  <script src="script.js"></script>
+</body>
+
 </html>
