Added paper prototypes
Added paper-prototype.html
Fixed storyboard and added paragraph.

--- a/projects/storyboards.html
+++ b/projects/storyboards.html
@@ -15,7 +15,7 @@
 
   <div>
     <a href="https://fxtzhou.github.io/des157/">Back</a>
-    <h2>Diversity in Design</h2>
+    <h2>Storyboards</h2>
 
     <p>After storyboarding, I realized that I wanted my audience to be a little more general. I received some feedback about how the site would gain traction or reachability, which made me think about how the high school student with interest in design might
       do research for the field. It's easy to just look it up via a wikipedia page or just get a list of the different disciplines in design. As of now, for this project, I don't have the ability to get it onto the first page of search results so I'm
