--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
         <ul>
           <li><a href="projects/topic-brainstorm.html">Topic Brainstorm</a></li>
           <li><a href="projects/comparative.html">Comparative Research</a></li>
-                    <li><a href="projects/research.html">Research</a></li>
-                      <li><a href="projects/audience.html">Audience Research</a></li>
-                        <li><a href="projects/storyboards.html">Storyboards</a></li>
-                        <li><a href="projects/moodboards.html">Visual Research</a></li>
-                        <li><a href="projects/brief.html">Project Brief</a></li>
+          <li><a href="projects/research.html">Research</a></li>
+          <li><a href="projects/audience.html">Audience Research</a></li>
+          <li><a href="projects/storyboards.html">Storyboards</a></li>
+          <li><a href="projects/moodboards.html">Visual Research</a></li>
+          <li><a href="projects/brief.html">Project Brief</a></li>
+          <li><a href="projects/paper-prototype.html">Paper Prototype</a></li>
         </ul>
       </nav>
     </section>
