Fixed paragraph in brief.html

--- a/projects/brief.html
+++ b/projects/brief.html
@@ -33,8 +33,8 @@
     </p>
     <h4>Goals for overall look</h4>
     <p>The project will be mostly interactive via a 'next' or 'previous' button that will work to navigate through the many fields of design. In each section, there will be a very short description of the discipline (with a link to read more) as well as
-      a demonstration of the behavior of a project (executed through javascript, created by me,) or an example of work done in that field shown in an image. <br>For example, if the section is on User Experience, there will be a snippet of code accompanying
-      what the behavior might be like on the front end.
+      a demonstration of the behavior of a project (executed through javascript, created by me,) or an example of work done in that field shown in an image.</p>
+    <p>For example, if the section is on User Experience, there will be a snippet of code accompanying what the behavior might be like on the front end.
     </p>
     </br>
   </div>
