--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <li><a href="projects/siteflow.html">Siteflow</a></li>
           <li><a href="projects/userflow.html">Userflow</a></li>
           <li><a href="projects/wireframe.html">Wireframe</a></li>
+          <li><a href="projects/interactivewireframe/interactivewireframe.html">Interactive Wireframe</a></li>
 
 
         </ul>
