--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="projects/userflow.html">Userflow</a></li>
           <li><a href="projects/wireframe.html">Wireframe</a></li>
           <li><a href="projects/interactivewireframe/interactivewireframe.html">Interactive Wireframe</a></li>
-
+          <li><a href="projects/comps.html">Comps</a></li>
 
         </ul>
       </nav>
