uploaded interactive prototype1

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <li><a href="projects/wireframe.html">Wireframe</a></li>
           <li><a href="projects/interactivewireframe/interactivewireframe.html">Interactive Wireframe</a></li>
           <li><a href="projects/comps.html">Comps</a></li>
+          <li><a href="projects/interactiveprototype1/interactiveprototype1.html">Interactive Prototype 1</a></li>
 
         </ul>
       </nav>
