--- a/projects/interactiveprototype1/interactiveprototype1.html
+++ b/projects/interactiveprototype1/interactiveprototype1.html
@@ -3,14 +3,16 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Pure JS One Page Scroll by Pete R. | The Pete Design</title>
+	<title>great title here</title>
 	<meta name="viewport" content="width=device-width , initial-scale= 1.0">
 	<link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 	<script type="text/javascript" src="onepagescroll.js"></script>
 	<link href='onepage-scroll.css' rel='stylesheet' type='text/css'>
+<script src="canvasjs.min.js"></script>
 	<link href='styles.css' rel='stylesheet'>
+
 </head>
 
 <body>
@@ -19,6 +21,13 @@
 		<div class="main">
 			<section class="page" id="page1">
 				<h1><span>According to AIGA, 60% of Design is</span> White.</h1>
+
+ <!-- Pie Chart -->
+<div id="chartContainer" style="height: 370px; max-width: 920px; margin: 0px auto;"></div>
+<script src="script.js">
+</script>
+<!-- Pie Chart End-->
+
 				<a href="https://designcensus.org/" style="margin-top: 50px;   text-decoration: none;  border: 1px #333 solid;">How?</a>
 				<a href="https://vivmokona.github.io/des157/corps/index.html" style="margin-top: 50px;   text-decoration: none;  border: 1px #333 solid;">Let's Fix That</a>
 			</section>
