Added footer to proto2
Added footer
Changed fonts
Changed colors

--- a/projects/interactiveprototype2/interactiveprototype2.html
+++ b/projects/interactiveprototype2/interactiveprototype2.html
@@ -6,7 +6,7 @@
 	<title>great title here</title>
 	<meta name="viewport" content="width=device-width , initial-scale= 1.0">
 	<link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:700|Lobster" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 	<script type="text/javascript" src="onepagescroll.js"></script>
 	<link href='onepage-scroll.css' rel='stylesheet' type='text/css'>
@@ -20,10 +20,10 @@
 	<div class="wrapper">
 		<div class="main">
 			<section class="page" id="page1">
-				<h1><span>According to AIGA, 60% of Design is</span> White.</h1>
+				<h1>According to AIGA, <span>60%</span> of Design is <span>White</span>.</h1>
 
  <!-- Pie Chart -->
-<div id="chartContainer" style="height: 370px; max-width: 920px; margin: 0px auto;"></div>
+<div id="chartContainer" style="height: 375px; max-width: 600px; margin: 0px auto;"></div>
 <script src="script.js">
 </script>
 <!-- Pie Chart End-->
@@ -50,22 +50,31 @@
 			<article></article></section>
 
 			<section class="page" id="page6">
-				<h3>Make a statement by placing yourself on the map based on your location.
-       You will be a small dot, but together with many more designers we can
-       collectively bring awareness.
-</h3>		 <article></article>
+							 <article></article>
+				<h3>Make a statement by placing yourself on the map based on your location.<br><br>
+       You will be a small dot, but <span>together</span> we can
+       collectively bring awareness.</h3>
+
 			</section>
 
 			<section class="page" id="page7">
+									 <article></article>
 				<h3>You and your dot are special.<br>
 					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3>
-					 <article></article>
-				<a href="index.html" style="margin-top: 50px;   text-decoration: none; border: 1px #333 solid;">Reset</a>
-				<a href="https://vivmokona.github.io/des157/corps/index.html" style="margin-top: 50px; text-decoration: none; border: 1px #333 solid;">Let's do it!</a>
+				<a href="interactiveprototype2.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #333 solid;">Reset</a>
+				<a href="https://vivmokona.github.io/des157/proto1/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #333 solid;">Let's do it!</a>
 			</section>
 
 		</div>
+
 	</div>
+	<footer>
+		<a href="">About</a>
+				<a href="">Contact</a>
+								<a href="">Privacy Policy</a>
+		<a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+	</footer>
 	<script>
 		onePageScroll(".main", {
 			sectionContainer: "section",
