--- a/projects/interactiveprototype2/interactiveprototype2.html
+++ b/projects/interactiveprototype2/interactiveprototype2.html
@@ -6,11 +6,11 @@
 	<title>great title here</title>
 	<meta name="viewport" content="width=device-width , initial-scale= 1.0">
 	<link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:700|Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:700|Lobster" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 	<script type="text/javascript" src="onepagescroll.js"></script>
 	<link href='onepage-scroll.css' rel='stylesheet' type='text/css'>
-<script src="canvasjs.min.js"></script>
+	<script src="canvasjs.min.js"></script>
 	<link href='styles.css' rel='stylesheet'>
 
 </head>
@@ -22,35 +22,39 @@
 			<section class="page" id="page1">
 				<h1>According to AIGA, <span>60%</span> of Design is <span>White</span>.</h1>
 
- <!-- Pie Chart -->
-<div id="chartContainer" style="height: 375px; max-width: 600px; margin: 0px auto;"></div>
-<script src="script.js">
-</script>
-<!-- Pie Chart End-->
+				<!-- Pie Chart -->
+				<div id="chartContainer" style="height: 375px; max-width: 600px; margin: 0px auto;"></div>
+				<script src="script.js">
+				</script>
+				<!-- Pie Chart End-->
 
 				<a href="https://designcensus.org/" style="margin-top: 50px;   text-decoration: none;  border: 1px #333 solid;">How?</a>
-				<a href="https://vivmokona.github.io/des157/corps/index.html" style="margin-top: 50px;   text-decoration: none;  border: 1px #333 solid;">Let's Fix That</a>
+				<a href="https://vivmokona.github.io/des157/proto2/index.html" style="margin-top: 50px;   text-decoration: none;  border: 1px #333 solid;">Let's Fix That</a>
 			</section>
 
 			<section class="page" id="page2">
 				<h1>Yet people from all walks of life are <span>designing</span> and <span>changing</span>
        the world today.</h1>
-		 <article></article></section>
+				<article></article>
+			</section>
 
 			<section class="page" id="page3">
 				<h1>There needs to be a <span>revisualization</span> to show there are more Designers of <span>Color</span> out here.</h1>
-			<article></article></section>
+				<article></article>
+			</section>
 
 			<section class="page" id="page4">
 				<h1>What can <span>you</span> do to help be a voice of <span>representation?</span> </h1>
-			<article></article></section>
+				<article></article>
+			</section>
 
 			<section class="page" id="page5">
 				<h1>We need <span>you</span> to help share your story!</h1>
-			<article></article></section>
+				<article></article>
+			</section>
 
 			<section class="page" id="page6">
-							 <article></article>
+				<article></article>
 				<h3>Make a statement by placing yourself on the map based on your location.<br><br>
        You will be a small dot, but <span>together</span> we can
        collectively bring awareness.</h3>
@@ -58,7 +62,7 @@
 			</section>
 
 			<section class="page" id="page7">
-									 <article></article>
+				<article></article>
 				<h3>You and your dot are special.<br>
 					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3>
 				<a href="interactiveprototype2.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #333 solid;">Reset</a>
@@ -70,10 +74,10 @@
 	</div>
 	<footer>
 		<a href="">About</a>
-				<a href="">Contact</a>
-								<a href="">Privacy Policy</a>
+		<a href="">Contact</a>
+		<a href="">Privacy Policy</a>
 		<a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+		<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
 	</footer>
 	<script>
 		onePageScroll(".main", {
