Fixed borders on links, footer size, and relinked to Vivian's page

--- a/projects/interactiveprototype2/interactiveprototype2.html
+++ b/projects/interactiveprototype2/interactiveprototype2.html
@@ -28,8 +28,8 @@
 				</script>
 				<!-- Pie Chart End-->
 
-				<a href="https://designcensus.org/" style="margin-top: 50px;   text-decoration: none;  border: 1px #333 solid;">How?</a>
-				<a href="https://vivmokona.github.io/des157/proto2/index.html" style="margin-top: 50px;   text-decoration: none;  border: 1px #333 solid;">Let's Fix That</a>
+				<a href="https://designcensus.org/" style="margin-top: 50px;   text-decoration: none;  border: 1px solid;">How?</a>
+				<a href="https://vivmokona.github.io/des157/proto2/index.html" style="margin-top: 50px;   text-decoration: none;  border: 1px solid;">Let's Fix That</a>
 			</section>
 
 			<section class="page" id="page2">
@@ -66,7 +66,7 @@
 				<h3>You and your dot are special.<br>
 					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3>
 				<a href="interactiveprototype2.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #333 solid;">Reset</a>
-				<a href="https://vivmokona.github.io/des157/proto1/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #333 solid;">Let's do it!</a>
+				<a href="https://vivmokona.github.io/des157/proto2/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #333 solid;">Let's do it!</a>
 			</section>
 
 		</div>
