--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           <li><a href="projects/interactivewireframe/interactivewireframe.html">Interactive Wireframe</a></li>
           <li><a href="projects/comps.html">Comps</a></li>
           <li><a href="projects/interactiveprototype1/interactiveprototype1.html">Interactive Prototype 1</a></li>
-                    <li><a href="projects/interactiveprototype2/interactiveprototype2.html">Interactive Prototype 2</a></li>
+          <li><a href="projects/interactiveprototype2/interactiveprototype2.html">Interactive Prototype 2</a></li>
+          <li><a href="projects/audience-test.html">Audience Test</a></li>
 
         </ul>
       </nav>
