Updates to proto2
Included images
fixed color scheme

--- a/projects/interactiveprototype2/interactiveprototype2.html
+++ b/projects/interactiveprototype2/interactiveprototype2.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+<img class="logo" src="images/logo.png" alt="logo" width="50">
 
 	<div class="wrapper">
 		<div class="main">
@@ -23,19 +24,19 @@
 				<h1>According to AIGA, <span>60%</span> of Design is <span>White</span>.</h1>
 
  <!-- Pie Chart -->
-<div id="chartContainer" style="height: 375px; max-width: 600px; margin: 0px auto;"></div>
+<div id="chartContainer" style="height: 300px; max-width: 600px; margin: 0px auto;"></div>
 <script src="script.js">
 </script>
 <!-- Pie Chart End-->
 
-				<a href="https://designcensus.org/" style="margin-top: 50px;   text-decoration: none;  border: 1px #333 solid;">How?</a>
-				<a href="https://vivmokona.github.io/des157/corps/index.html" style="margin-top: 50px;   text-decoration: none;  border: 1px #333 solid;">Let's Fix That</a>
+				<a href="https://designcensus.org/" style="margin-top: 25px;   text-decoration: none;  border: 1px #333 solid;">How?</a>
+				<a href="https://vivmokona.github.io/des157/corps/index.html" style="margin-top: 25px;   text-decoration: none;  border: 1px #333 solid;">Let's Fix That</a>
 			</section>
 
 			<section class="page" id="page2">
 				<h1>Yet people from all walks of life are <span>designing</span> and <span>changing</span>
        the world today.</h1>
-		 <article></article></section>
+		 <article><img src="images/2.gif" alt="2"></article></section>
 
 			<section class="page" id="page3">
 				<h1>There needs to be a <span>revisualization</span> to show there are more Designers of <span>Color</span> out here.</h1>
@@ -43,11 +44,11 @@
 
 			<section class="page" id="page4">
 				<h1>What can <span>you</span> do to help be a voice of <span>representation?</span> </h1>
-			<article></article></section>
+			<article><img src="images/4.png"alt="4"></article></section>
 
 			<section class="page" id="page5">
 				<h1>We need <span>you</span> to help share your story!</h1>
-			<article></article></section>
+		<img src="images/5.png" alt="5" width="500" align="center"></section>
 
 			<section class="page" id="page6">
 							 <article></article>
