--- a/projects/interactiveprototype2/interactiveprototype2.html
+++ b/projects/interactiveprototype2/interactiveprototype2.html
@@ -8,6 +8,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:700|Lobster" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+	<link rel="stylesheet" href="http://anijs.github.io/lib/anicollection/anicollection.css">
 	<script type="text/javascript" src="onepagescroll.js"></script>
 	<link href='onepage-scroll.css' rel='stylesheet' type='text/css'>
 	<script src="canvasjs.min.js"></script>
@@ -17,6 +18,9 @@
 
 <body>
 	<img class="logo" src="images/logo.png" alt="logo" width="50">
+	<div class="bouncearrow">
+	  <a class="fa fa-arrow-down fa-2x" href="#"></a>
+	</div>
 
 	<div class="wrapper">
 		<div class="main">
@@ -37,7 +41,11 @@
 			<section class="page" id="page2">
 				<h1>Yet people from all walks of life are <span>designing</span> and <span>changing</span>
        the world today.</h1>
-				<img src="images/2.gif" alt="2" align="center"></section>
+<section id="revealAnim">
+	<img class="side" src="images/2.gif" alt="2" align="center">
+			</section>
+
+		</section>
 
 			<section class="page" id="page3">
 				<h1>There needs to be a <span>revisualization</span> to show there are more Designers of <span>Color</span> out here.</h1>
@@ -45,29 +53,33 @@
 
 			<section class="page" id="page4">
 				<h1>What can <span>you</span> do to help be a voice of <span>representation?</span> </h1>
+									<img src="images/3.png" alt="3" align="center">
 			</section>
 
 			<section class="page" id="page5">
 				<h1>We need <span>you</span> to help share your story!</h1>
-				<img src="images/4.png" alt="4" align="center"></section>
+					<img src="images/4.png" alt="4" align="center">
+				</section>
 
 			<section class="page" id="page6">
 
 				<h3 style="float: left;">Make a statement by placing yourself on the map based on your location.<br><br>
        You will be a small dot, but <span>together</span> we can
        collectively bring awareness.</h3>
-				<img src="images/5.png" alt="5" width="300">
+				<img src="images/5.png" alt="5" width="500">
 
 			</section>
 
 			<section class="page" id="page7">
 				<article></article>
-				<h3>You and your dot are special.<br>
+				<h3 style="float: left">You and your dot are special.<br>
 					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3><br>
+					 								<img style=""src="images/6.png" alt="6" width="500">
 				<article style="float: left; margin-left: 100px;">
 					<a href="interactiveprototype2.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #fff solid;">Reset</a>
 					<a href="https://vivmokona.github.io/des157/proto1/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #fff solid;">Let's do it!</a>
 				</article>
+
 			</section>
 
 		</div>
